Fix android sdk errors